--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>幕幕 - mumu</title>
         <meta name="x5-fullscreen" content="true">
         <!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
-        <link rel="stylesheet" type="text/css" href="./archive.css" />
+        <link rel="stylesheet" type="text/css" href="./page.css" />
         <link rel="apple-touch-startup-image" href="./favicon.ico" />
         <link rel="apple-touch-icon-precomposed" href="./favicon.ico" />
         <link rel="apple-touch-icon" href="./favicon.ico" />
@@ -23,7 +23,7 @@
         <script src="./page-pre-min.js" type="application/javascript"></script>
         <script>
             if(!isPc()){
-                document.title="幕幕 - "+location.host
+                document.title=location.host + " - 幕幕"
             }
         </script>
         <style>
@@ -116,7 +116,7 @@
 
     </body>
     
-    <script src="./page-post.js" type="application/javascript"></script>
+    <script src="./page-post-min.js" type="application/javascript"></script>
     <script>
         // if(navigator.geolocation) {
         //     navigator.geolocation.getCurrentPosition(function(position){
