--- a/src/video.html
+++ b/src/video.html
@@ -28,12 +28,6 @@
             if(!isPc()){
                 document.title=location.host + " - mumu"
             }
-            debugger
-            var haveindex = localStorage.getItem('haveindex')
-            if(!haveindex){
-                localStorage.setItem('redirect',location.href)
-                location.replace('./index.html')
-            }
         </script>
     </head>
     <body style="width: 100%;height: 100%;margin:0;padding:0;background-color: #000000;" onresize="onresize()">
@@ -290,6 +284,11 @@
         </div>
         <div  class="unselectable" style="display: none;">
             <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279792021'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1279792021%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+        </div>
+        <div style="font-size:16px;width:90px;height:25px;line-height:25px;position: absolute;right:0;bottom:0;cursor: pointer;
+                border-style:solid;border-width:1px 0 0 1px;border-color: #acacac;color: #acacac;text-align: center;border-radius: 3px 0 0 0;"
+            onclick="location.href='./index.html'">
+            返回主页
         </div>
     </body>
     <script src="./video-post.js" type="application/javascript"></script>
