--- a/src/video.html
+++ b/src/video.html
@@ -245,11 +245,8 @@
                     <img src="./img/search.svg" style="width:15px;height: 14px;"/>
                 </button>
                 <button onclick="chShowDialog()" class="unselectable" 
-                    style="cursor:pointer;padding: 0px;width: 50px;height: 20px;color: #bfbbbb;margin-right: 35px;
+                    style="cursor:pointer;padding: 0px;width: 50px;height: 20px;color: #bfbbbb;
                         border: 1px solid #bfbbbb;background: transparent;border-radius: 3px;">
-                    整句
-                </button>
-                <button onclick="chShowDialog()" class="unselectable" style="visibility: hidden;cursor:pointer;padding: 0px;width: 50px;height: 20px;color: #bfbbbb;border: 1px solid #bfbbbb;background: transparent;border-radius: 3px;">
                     整句
                 </button>
             </div>
