--- a/src/video.html
+++ b/src/video.html
@@ -251,7 +251,7 @@
                 </button>
             </div>
             <div id="historywordspad" style="font-size:0;word-break: break-all;white-space: normal;margin-top: 20px;height: 100px;overflow: hidden;">
-                <span id="historyword_template" style="font-size:14px;display:none;margin-right:10px;display: inline-block;cursor: pointer;margin-bottom:5px;color:#9f9f9f;" 
+                <span id="historyword_template" style="font-size:14px;display:none;margin-right:10px;cursor: pointer;margin-bottom:5px;color:#9f9f9f;" 
                     onclick="pauseVideo();translatee(this.innerText);"></span>
             </div>
             <!-- 循环字幕功能块 -->
