--- a/src/index.html
+++ b/src/index.html
@@ -108,10 +108,12 @@
             <div id="msgframe" class="unselectable" style="position: absolute;bottom:0;width:100%;height:20px;font-size:0;background-color: #ececec;">
                 <span id="msg" style="overflow:hidden;text-overflow: ellipsis;white-space: nowrap;width:90%;height:100%;display:inline-block;font-size:14px;color:#4a4a4a;
                                 box-sizing: border-box;padding:0 5px;vertical-align: middle;cursor: pointer;">
-                    您可以在此留言, 或联系我<span id="wxqrcode"><img  src="./img/wxqrcode.jpg" style="width:20px;height:20px;cursor: pointer;vertical-align: bottom;" 
-                        onclick="
-                            $('#wxqrcode').viewer({title:false});
-                        " /></span>
+                    <span id="wxqrcode">
+                        <img  src="./img/wxqrcode.jpg" style="width:20px;height:20px;cursor: pointer;vertical-align: bottom;" 
+                            onclick="
+                                $('#wxqrcode').viewer({title:false});
+                            " />
+                    </span>
                 </span>
                 <span  style="width:10%;height:100%;display:inline-block;background-color: #b3b3b3;font-size:14px;cursor: pointer;text-align: center;color:#4a4a4a;font-weight: 900;
                         vertical-align: middle;"
@@ -119,7 +121,7 @@
                         var r= prompt('留言')
                         if(r){
                             $.post('/mumu/sendboardmsg',{text:r})
-                            alert('已发送')
+                            alert('您的留言将在明天展示一段时间')
                         }
                     ">
                     ,,,
