--- a/src/video.html
+++ b/src/video.html
@@ -144,15 +144,14 @@
             <!-- 中文字幕弹窗块 -->
             
             <div id="chDialog" class="chDialog" style="display:none;position: absolute;background: rgba(0, 0, 0, 0.3);;top: 0;left: 0;right:0;bottom:0;z-index: 999999999;">
-                <div style="width: 100%;position: absolute;top: 285px;padding: 10px 0px;box-sizing: border-box;margin: auto;text-align: center;background: #ffffff;letter-spacing: 0.5px;">
-                </div>
+                <div style="width: 100%;position: absolute;top: 285px;padding: 10px 0px;box-sizing: border-box;margin: auto;text-align: center;
+                        background: #ffffff;letter-spacing: 0.5px;"></div>
             </div>
            
-            <div id="pcrecommand" class="unselectable" style="color: #827e7e;position: absolute;bottom:0;font-size:14px;">
-            </div>
-            <div    style="font-size:16px;width:90px;height:25px;line-height:25px;position: absolute;right:0;bottom:0;cursor: pointer;
-                        border-style:solid;border-width:1px 0 0 1px;border-color: #acacac;color: #acacac;text-align: center;border-radius: 3px 0 0 0;"
-                    onclick="location.href='./index.html'">
+            <div id="pcrecommand" class="unselectable" style="color: #acacac;position: absolute;bottom:0;right:0;font-size:14px;display:none;"></div>
+            <div style="font-size:14px;width:100%;height:20px;line-height:20px;position: absolute;right:0;bottom:0;cursor: pointer;
+                    border-style:solid;border-width:1px 0 0 1px;border-color: #d8d8d8;color: #d8d8d8;text-align: center;"
+                onclick="location.href='./index.html'">
                 返回主页
             </div>
         </div>
